[gd_scene load_steps=7 format=3 uid="uid://pdloxy5lmu86"]

[ext_resource type="Script" path="res://bottom_screen.gd" id="1_4gij1"]
[ext_resource type="LabelSettings" uid="uid://cpuux455m0mhe" path="res://font.tres" id="2_4n3bo"]
[ext_resource type="Texture2D" uid="uid://dsurnabs8anjd" path="res://sprites/icons/coin.png" id="3_34u47"]
[ext_resource type="Texture2D" uid="uid://dwj7nmugh8so0" path="res://sprites/borders.png" id="4_2tjxh"]

[sub_resource type="Gradient" id="Gradient_xl7xx"]
colors = PackedColorArray(0.227451, 0.113725, 0.12549, 1, 0.117647, 0.054902, 0.0666667, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7ropb"]
gradient = SubResource("Gradient_xl7xx")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="Bottom_screen" type="Node2D"]
script = ExtResource("1_4gij1")

[node name="Background" type="TextureRect" parent="."]
offset_left = 439.0
offset_top = 37.0
offset_right = 669.0
offset_bottom = 230.0
texture = SubResource("GradientTexture2D_7ropb")

[node name="Gold" type="Label" parent="."]
offset_left = 39.0
offset_top = 6.0
offset_right = 100.0
offset_bottom = 25.0
text = "0 Gold
"
label_settings = ExtResource("2_4n3bo")

[node name="GoldSprite" type="Sprite2D" parent="."]
position = Vector2(320, 15)
scale = Vector2(0.035, 0.035)
texture = ExtResource("3_34u47")

[node name="ShopBorder" type="NinePatchRect" parent="."]
offset_left = 162.0
offset_top = 116.0
offset_right = 358.0
offset_bottom = 305.0
texture = ExtResource("4_2tjxh")
region_rect = Rect2(0, 0, 560.348, 410.214)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="ShopBackground" type="ColorRect" parent="."]
offset_left = 44.0
offset_top = 49.0
offset_right = 94.0
offset_bottom = 99.0
color = Color(0.34902, 0.184314, 0.203922, 1)
